# uox

./: README.md  uox.sln  uox.vcxproj  uox.vcxproj.filters
data/configuration/: art_overrides.cfg  normalization.cfg  purpose.txt  remove.cfg  server.cfg  terrain_overrides.cfg
data/configuration/regions/: instalog.cfg  musiclist.cfg  shared.cfg  sosareas.cfg  unique.cfg  unique.cfg1  worlds.cfg  worlds.cfg1
data/definition/: purpose.txt
data/language/: czech_message.lang  english_message.lang  french_message.lang  german_message.lang  italian_message.lang  polish_message.lang  portuguese_message.lang  purpose.txt  spanish_message.lang
data/script/: purpose.txt
docs/: uox.cfg
server/: CMakeLists.txt  main.cpp
server/clientobjects/: CMakeLists.txt  baseobj.cpp  baseobj.hpp  factory.cpp  factory.hpp  itemobj.cpp  itemobj.hpp  mobobj.cpp  mobobj.hpp  playerobj.cpp  playerobj.hpp  serial_generator.cpp  serial_generator.hpp
server/io/: CMakeLists.txt  console.cpp  console.hpp  logger.cpp  logger.hpp
server/network/: CMakeLists.txt  client.cpp  client.hpp  packet.cpp  packet.hpp  serversock.cpp  serversock.hpp
server/system/: CMakeLists.txt  account.cpp  account.hpp  langmsg.cpp  langmsg.hpp  region.cpp  region.hpp  serverlocation.cpp  serverlocation.hpp  universe.cpp  universe.hpp  world.cpp  world.hpp
server/types/: CMakeLists.txt  general.cpp  general.hpp  object_types.cpp  object_types.hpp  position_types.cpp  position_types.hpp  system.cpp  system.hpp  system_types.cpp  system_types.hpp  ultima_types.cpp
server/ultima/: CMakeLists.txt  artblock.cpp  artblock.hpp  terrainblock.cpp  terrainblock.hpp  tileInfo.cpp  tileInfo.hpp  tileinfo.cpp  tileinfo.hpp  ultima_types.cpp  ultima_types.hpp  uomap.cpp  uomap.hpp  uomulti.cpp  uomulti.hpp  uopfile.cpp  uopfile.hpp
server/utility/: secgroup.cpp  secgroup.hpp  secparser.cpp  socket.cpp  socket.hpp
support/zlib/: zlib.sln  zlib.vcxproj
support/zlib/win32/lib/: zlib.lib
support/zlib/win64/lib/: zlib.lib
support/zlib/win64/lib/pkgconfig/: zlib.pc
uox/: main.cpp
uox.xcodeproj/: project.pbxproj
uox.xcodeproj/xcshareddata/xcschemes/: uox.xcscheme
uox.xcodeproj/xcuserdata/charleskerr.xcuserdatad/xcschemes/: xcschememanagement.plist
